Refactor Render func & templating

--- a/locales/resources/en.json
+++ b/locales/resources/en.json
@@ -1,7 +1,18 @@
 {
+  "head": {
+    "index": "Home",
+    "demo": "Demo",
+    "about": "About",
+    "auth": "Authentication"
+  },
   "menu": {
-    "home": "Home",
+    "index": "Home",
     "demo": "Demo",
     "about": "About"
+  },
+  "common": {
+    "buttons": {
+      "login": "Login"
+    }
   }
 }
