--- a/locales/resources/ru.json
+++ b/locales/resources/ru.json
@@ -1,7 +1,18 @@
 {
+  "head": {
+    "index": "Главная",
+    "demo": "Демо",
+    "about": "О нас",
+    "auth": "Вход"
+  },
   "menu": {
-    "home": "Главная",
+    "index": "Главная",
     "demo": "Демо",
     "about": "О нас"
+  },
+  "common": {
+    "buttons": {
+      "login": "Войти"
+    }
   }
 }
